# meirim

./: .editorconfig  .eslintignore  .eslintrc  .gitattributes  .gitignore  .sparkleshare  LICENSE  LICENSE.md  README.md  app.js  boris_todo.md  config-overrides.js  ecosystem.config.js  how-to-submit.html  knexfile.js  mkdocs.yml  package-lock.json  package.2json  package.json  webpack.config.js
api/: .eslintrc.json  apiApp.js  apiRoutes.js  app.js  constants.js  errorHandler.js  routes.js  schelduler.js  staticApp.js  staticRoutes.js
backend/: README.md  app.js  knexfile.js  package-lock.json  package.json
cli/: README.md  install_dev_env.sh  pyproject.toml
cli/ansible/: development_computer.yaml
cli/ansible/roles/base/tasks/: main.yml
cli/src/: cli.py  meirim.py
cli/src/authorization/: commands.py
cli/src/common/: regions.py  ssh.py
cli/src/config/: commands.py
cli/src/dev/: commands.py
cli/src/dev/db/: commands.py  common.py
cli/src/dev/phpmyadmin/: commands.py
cli/src/phpmyadmin/: commands.py
cli/src/ssh/: commands.py
client/: .babelrc  .editorconfig  .env  .env.production  .eslintrc.js  .gitignore  .prettierrc.js  Dockerfile.client  config-overrides.js  cypress.json  index.js  jsconfig.json  package-lock.json  package.json  router.js  webpack.config.js
config/: default.json  local.json
data_micro_service/: analyze.py  data_tools.py  http_service.py  rules.py
data_processing/: categorize_plans.js
doc/: import.sql
docker/: test-compose.yml
docs/: backend.md  basics.md  crawler.md  frontend.md  index.md  utilities.md
src/: App.js  (+6 more)
(+1319 files in other folders)
