[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meirim"
version = "0.0.1"
authors = [
  { name="Tomer Shalev", email="info@meirim.org" },
]
dependencies = [
    'boto3',
    'click',
    'requests',
    'rich',
]
description = "A CLI tool for developers of meirim.org"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
meirim = 'src.meirim:cli'

[project.urls]
"Homepage" = "https://github.com/meirim-org/meirim"
"Bug Tracker" = "https://github.com/meirim-org/meirim/issues"
